// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldOnlyLabel"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldOnlyLabel"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Grid has a tip 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      class="form-text"
      id="undefined_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Grid has an id 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      disabled=""
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid is not required 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      aria-required="false"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldOnlyLabel"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldOnlyLabel"
    >
      text
    </span>
  </div>
</div>
`;

exports[`Grid renders columns 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
              <th
                class=""
              >
                col2
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col1
                </span>
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_jehf_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_jehf"
                      name="jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_jehf_fieldLabel"
                >
                  row: row, column: col2
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid renders no columns when columns comes empty 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid renders no rows when row comes empty 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid renders rows 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                row1
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_fieldId_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_fieldId"
                      name="fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_fieldId_fieldLabel"
                >
                  row: row1, column: col1
                </span>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class=""
              >
                row2
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-checked="false"
                      aria-errormessage="undefined_fieldError"
                      aria-invalid="true"
                      aria-labelledby="undefined_fieldId_fieldId_fieldLabel undefined_fieldLabel"
                      class="custom-control-input form-builder-grid-field"
                      id="undefined_fieldId_fieldId"
                      name="fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
                <span
                  class="sr-only"
                  id="undefined_fieldId_fieldId_fieldLabel"
                >
                  row: row2, column: col1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
